fix(yalb-1263): fix for max-width on wrapped-image

--- a/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
+++ b/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
@@ -1,6 +1,6 @@
 @use '../../00-tokens/tokens';
 
-$wrapped-image-max: '1470px';
+$wrapped-image-max: '992px';
 
 .wrapped-image {
   @include tokens.spacing-page-inner;
